--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 /* Imported font from Google Fonts, is licensed under the OFL. */
 @import url('https://fonts.googleapis.com/css2?family=Silkscreen&display=swap');
+background-image: url('maze.jpg');
 
 /* Hidden class, allows screens to be hidden when needed */
 .hidden {
@@ -65,6 +66,14 @@ body {
     flex-direction: column;
     align-items: center;
     background-color: #1b3b28;
+    background-image: url('maze.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     color: #eae7dc;
     font-family: 'Silkscreen', sans-serif;
+}
+
+.hidden {
+    display: none;
 }
